# ai-code-metrics

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: metrics-collection.yml  test.yml
config/: prometheus.yml
dashboard/: summary.json
docs/: claude-code-guide.md
docs/research/: AI Coding Assistant Metrics Framework: Complete Implementation Plan.md  Literature Review & Existing Framework Analysis for Claude Code Evaluation Framework.md  Research Plan.md  UV Commands Reference for Python Project Management.md
examples/: track_ai_usage.py
grafana/dashboards/: ai_coding_metrics.json  dashboard.yml
scripts/: ai-metrics  collect_metrics.py  create_dashboard.py  generate_report.py  run_exporter.py
src/ai_code_metrics/: __init__.py  cli.py  config.py
src/ai_code_metrics/analyzers/: __init__.py  commit_analyzer.py  git_metrics.py  roi_calculator.py
src/ai_code_metrics/collectors/: __init__.py  api_metrics.py  timing_metrics.py
src/ai_code_metrics/exporters/: __init__.py  prometheus_exporter.py
src/ai_code_metrics/security/: __init__.py  anonymizer.py  secrets.py
src/ai_code_metrics/templates/: dashboard.html
tests/: __init__.py  test_commit_analyzer.py  test_timing_metrics.py
