[project]
name = "ai-code-metrics"
version = "0.1.0"
description = "Framework for measuring AI coding assistant effectiveness"
authors = [
    {name = "Cole Summers"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client",
    "gitpython",
    "flask",
    "tiktoken",
    "cryptography",
]

[project.scripts]
ai-metrics = "ai_code_metrics.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pylint",
    "bandit",
    "black",
    "ruff",
    "mypy",
    "matplotlib",
    "numpy",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_code_metrics"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "coverage>=7.8.2",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "numpy>=2.2.6",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 100
target-version = ["py312"]